kylin-photo-viewer (1.1.0) v101; urgency=medium
  
  * BUG号：无
  * 需求号：无
  * 其他改动说明：升级版本号，更新用户手册相关内容，优化动图保存逻辑
  * 影响域：关于界面版本号更新，用户手册看图内容更新

 -- zoujunnan <zoujunnan@kylinos.cn>  Fri,25  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-23) v101; urgency=medium
  
  * BUG号：无
  * 需求号：6839，6838，6834，6325
  * 其他改动说明：无
  * 影响域：增加：复制，打印，重命名功能

 -- zoujunnan <zoujunnan@kylinos.cn>  Wed,16  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-22) v101; urgency=medium
  
  * BUG号：62462
  * 需求号：无
  * 其他改动说明：无
  * 影响域：无

 -- zoujunnan <zoujunnan@kylinos.cn>  Sat,19  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-21) v101; urgency=medium
  
  * BUG号：61342
  * 需求号：无
  * 其他改动说明：无
  * 影响域：无

 -- zoujunnan <zoujunnan@kylinos.cn>  Fri,11  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-20) v101; urgency=medium
  
  * BUG号：无
  * 需求号：无
  * 其他改动说明：修改拖拽后缀为大写的图片打开失败问题；固定字号
  * 影响域：控制面板字号变化，界面字号不跟随变化

 -- zoujunnan <zoujunnan@kylinos.cn>  Thu,10  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-19) v101; urgency=medium
  
  * BUG号：60343
  * 需求号：无
  * 其他改动说明：无
  * 影响域：仅bug修复，无影响

 -- zoujunnan <zoujunnan@kylinos.cn>  Sat,05  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-18) v101; urgency=medium
  
  * BUG号：59722，59719
  * 需求号：无
  * 其他改动说明：无
  * 影响域：仅bug修复，无影响

 -- zoujunnan <zoujunnan@kylinos.cn>  Sat,05  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-17) v101; urgency=medium
  
  * BUG号：59520，59519，58661
  * 需求号：无
  * 其他改动说明：修改图片缩放百分比，每次增减由10%变为5%
  * 影响域：修改图片缩放百分比，每次增减由10%变为5%

 -- zoujunnan <zoujunnan@kylinos.cn>  Fri,04  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-16) v101; urgency=medium
  
  * BUG号：56583，57370
  * 需求号：6322，6329，6331，6333，6335
  * 其他改动说明：无
  * 影响域：相册顶部，添加打开图片按钮；默认显示图片机制改为：打开时，原图大于窗口，自适应显示；反之，1：1显示；rebuild

 -- zoujunnan <zoujunnan@kylinos.cn>  Thu,03  Jun 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-15) v101; urgency=medium
  
  * BUG号：55870，56583，57370
  * 需求号：6322，6329，6331，6333，6335
  * 其他改动说明：无
  * 影响域：仅bug修复，无影响
