@@ -1,0 +1,39 @@
+<schemalist gettext-domain="ukui-log4qt-kylin-photo-viewer">
+    <schema id="org.ukui.ukui-log4qt-kylin-photo-viewer" path="/org/ukui/ukui-log4qt-kylin-photo-viewer/">
+        <key type="s" name="log4j-handleqtmessages">
+            <default>"true"</default>
+            <summary>hook qt messages</summary>
+            <description>Control if hook qt messages</description>
+        </key>
+        <key type="s" name="log4j-rootlogger">
+            <default>"DEBUG,console,daily"</default>
+            <summary>config rootLogger's level and appenders</summary>
+            <description>config rootLogger's level and appenders:"level,appender"</description>
+        </key>
+        <key type="s" name="log4j-appender-daily-datepattern">
+            <default>".yyyy-MM-dd"</default>
+            <summary>daily log file pattern</summary>
+            <description>set daily log file pattern format:one day</description>
+        </key>
+        <key type="s" name="log4j-appender-daily-layout-conversionpattern">
+            <default>"%d{yyyy-MM-dd HH:mm:ss,zzz}(%-4r)[%t]|%-5p| - %m%n"</default>
+            <summary>set log message's format</summary>
+            <description>set log message's format</description>
+        </key>
+        <key type="i" name="delaytime">
+            <default>3600</default>
+            <summary>set check log files delay time</summary>
+            <description>set check log files delay time</description>
+        </key>
+        <key type="i" name="maxfilecount">
+            <default>7</default>
+            <summary>set log files count</summary>
+            <description>set log files count,unit s</description>
+        </key>
+        <key type="i" name="maxfilesize">
+            <default>512</default>
+            <summary>set log files total size</summary>
+            <description>set log files total size, unit M</description>
+        </key>
+    </schema>
+</schemalist>
