@@ -19,6 +19,7 @@ Build-Depends: debhelper (>=9),
                libqt5x11extras5-dev,
                libkf5windowsystem-dev,
                libgsettings-qt-dev,
+               libukui-log4qt-dev,
                pkgconf,
 Standards-Version: 4.4.0
 Homepage: https://github.com/ubuntukylin/kylin-photo-viewer
