@@ -8,6 +8,8 @@ CONFIG += c++11
 # 适配窗口管理器圆角阴影
 LIBS +=-lpthread
 LIBS +=-lX11
+#log
+LIBS += -L/usr/lib/libukui-log4qt.so.1.0.0 -lukui-log4qt
 TARGET = kylin-photo-viewer
 TEMPLATE = app
 
